# object_identification_localization

./: .gitignore  README.md  config.ini  eigen_fix
CAD_models/: README.md
Headers/: Access_Model_data.cpp  Access_Model_data.h  Access_Results.cpp  Access_Results.h  Cloud_Merging.cpp  Cloud_Merging.h  Cloud_Segmentation.cpp  Cloud_Segmentation.h  Config_reader.cpp  Config_reader.h  Hint_system_class.cpp  Hint_system_class.h  Hint_system_class_old.cpp  Hint_system_class_old.h  Identification_class.cpp  Identification_class.h  JNI_Helper.cpp  JNI_Helper.hpp  Linker.cpp  Linker.h  Manipulation.cpp  Manipulation.h  Normal_utility.cpp  Normal_utility.h  Pose_Class.cpp  Pose_Class.h  RDF_Connector.cpp  RDF_Connector.hpp  Render_synthetic_views.cpp  Render_synthetic_views.h  Render_views_tesselated_sphere_modified.cpp  Render_views_tesselated_sphere_modified.h  Robot_Data_Fetcher.cpp  Robot_Data_Fetcher.h  Segmentation_Data_Reader.cpp  Segmentation_Data_Reader.h  Similar_object_recognition.cpp  Similar_object_recognition.h  View_Feature_Score.cpp  View_Feature_Score.h  (+32 more)
add_model/: CMakeLists.txt  README.md  offline_data_generation.cpp
background_creator/: CMakeLists.txt  README.md  background_creator.cpp
camera_hand_calibration/: CMakeLists.txt  README.md  camera_hand_calibration.cpp
docs/: README.md  eigen_alignment_fix.md  installation.md
headers/: access_model_data.cpp  access_results.cpp  access_results.h  cloud_segmentation.cpp  cloud_segmentation.h  config_reader.cpp  config_reader.h  hint_system_class.cpp  hint_system_class.h  identification_class.cpp  jni_helper.cpp  normal_utility.cpp  normal_utility.h  pose_class.cpp  pose_class.h  pose_data.h  rdf_connector.hpp  render_synthetic_views.cpp  render_synthetic_views.h  render_views_tesselated_sphere_modified.cpp  render_views_tesselated_sphere_modified.h  robot_data_fetcher.cpp  sample_consensus_prerejective.hpp  similar_object_recognition.cpp  similar_object_recognition.h  view_graph.cpp  view_graph.h
hint_system_debugger/: CMakeLists.txt  hint_system_debugger.cpp
librealsense_capturer/: CMakeLists.txt  README.md  librealsense_capturer.cpp
matlab/: README.md  calibration_pointpicking.m  mcr_readme.txt  plot_axes.m  test_3D.m  test_3D_v2.m  test_calibration_pointpicking.m
object_identification_debugger/: CMakeLists.txt  README.md  object_identification_debugger.cpp
remove_model/: CMakeLists.txt  README.md  remove_model.cpp
system/: CMakeLists.txt  README.md  clean.sh  system.cpp
tests/robot_data_fetcher/: CMakeLists.txt  robot_data_fetcher.cpp
tools/: README.md
tools/feature_visualizer/: CMakeLists.txt  feature_visualizer.cpp
tools/generate_distinguish_utilities/: CMakeLists.txt  generate_new_distinguish_utilities.cpp
tools/generate_feature_utilities/: CMakeLists.txt  generate_feature_utilities.cpp
tools/generate_normal_utilities/: CMakeLists.txt  normal_utility_test.cpp
tools/measure_distance/: CMakeLists.txt  measure_distance.cpp
tools/mesh_sampling/: CMakeLists.txt
tools/save_local_features/: CMakeLists.txt  save_local_features.cpp
tools/utility_display/: README.md
tools/utility_display/Distinguish_utility/: CMakeLists.txt  README.md  distinguish_utility_display.cpp
tools/utility_display/Feature_utility/: CMakeLists.txt  README.md  feature_utility_display.cpp
tools/utility_display/Normal_utility/: CMakeLists.txt  README.md  normal_utility_display.cpp
tools/utility_display/Summed_utilities/: CMakeLists.txt  README.md  summed_utility_display.cpp
tools/utility_display/Summed_utility/: README.md
tools/utility_display/View_utility/: CMakeLists.txt  README.md  view_utility_display.cpp
