set (CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "")
set(CURL_LIBRARY "-lcurl") 

cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(system)

find_package(CURL REQUIRED) 
find_package(PCL 1.8 REQUIRED)
find_package(JNI REQUIRED)

include_directories(${CURL_INCLUDE_DIR})
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${JNI_INCLUDE_DIRS})

link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable (system system.cpp)
add_library(Access_Results ../Headers/access_results.cpp)
add_library(Identification_Class ../Headers/identification_class.cpp)
add_library(Access_Model_Data ../Headers/access_model_data.cpp)
add_library(View_Graph ../Headers/view_graph.cpp)
add_library(Manipulation ../Headers/manipulation.cpp)
add_library(Pose_Class ../Headers/pose_class.cpp)
add_library(Linker ../Headers/linker.cpp)
add_library(Robot_Data_Fetcher ../Headers/robot_data_fetcher.cpp)
add_library(Cloud_Segmentation ../Headers/cloud_segmentation.cpp)
add_library(Hint_System_Class ../Headers/hint_system_class.cpp)
add_library(Cloud_Merging ../Headers/cloud_merging.cpp)
add_library(JNI_Helper ../Headers/jni_helper.cpp)
add_library(RDF_Connector ../Headers/RDF_Connector.cpp)
add_library(Config ../Headers/config_reader.cpp)

target_link_libraries (system ${PCL_LIBRARIES})
target_link_libraries (system Access_Results ${PCL_LIBRARIES})
target_link_libraries (system Identification_Class)
target_link_libraries (system Access_Model_Data)
target_link_libraries (system Manipulation)
target_link_libraries (system Pose_Class)
target_link_libraries (system Linker Access_Results Manipulation)
target_link_libraries (system Robot_Data_Fetcher ${CURL_LIBRARY})
target_link_libraries (system Cloud_Segmentation)
target_link_libraries (system Hint_System_Class View_Graph Access_Model_Data)
target_link_libraries (system Cloud_Merging)
target_link_libraries (system RDF_Connector JNI_Helper ${JNI_LIBRARIES})
target_link_libraries (system Config)
